# orthanc

./: .gitignore  CMakeLists.txt  README.md  complex_turret.py  detections.json  requirements.txt  run_tracking.sh  simple_turret.py  test_ipc.sh
config/: settings.py  simple_config.py  turret_config.json
scripts/: yolo_detector.py
src/: ServoController.cpp  ServoController.hpp  SignalGenerator.cpp  SignalGenerator.hpp  Turret.cpp  Turret.hpp  main.cpp  old_main.py  orthanc  tower.cpp
src/cpp/: Turret.cpp  bt_nodes.hpp  bt_tracker_main.cpp  main.cpp
src/cpp/trees/: basic_track.xml
src/hardware/: led_controller.py  servo_controller.py
src/python/: calibrate_fov_headless.py  detection_service.py  yolo_detector.py  yolo_detector_streaming.py
tests/: test_camera.py  test_camera_headless.py  test_pan_tilt_servo.cpp  test_setup.py
tests/cpp/: menu.cpp  test_pan_tilt_servo.cpp  test_servo.cpp
tests/python/: servoDiagTest.py  test_yolo_headless.py
version/: ServoController.cpp
